Adding NSLocation key in properties

--- a/wit-ios-eval/Info.plist
+++ b/wit-ios-eval/Info.plist
@@ -36,6 +36,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow Wit API to better resolve location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Allow Wit API to better resolve location</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
